--- a/notes/may2014.md
+++ b/notes/may2014.md
@@ -1,4 +1,29 @@
-- [ ] admin: make the monitor connect to all bup servers and verify that they are accepting connections; e.g., under duress they port where they are serving may change.;   OR, at least check that `bup_server` is running on all storage machines. 
+- [x] systematic chown:
+     - [x] add a bup_storage.py chown <project_id> command, which avoids the .snapshots directory
+     - [x] write a little python script that runs the chown thing on each project
+     - [x] launch it all over
+
+- [ ] setup a small test SMC in Europe for testing:
+    - [x] define and spin up a web machine and compute machine
+    - [x] configure zfs pool for compute machine
+
+    - [x] add secrets for stunnel
+    - [x] add web machine to database firewall -- for this machine only 10.1.10.2
+
+    - [x] start hub, nginx, stunnel, haproxy on the web machine... in a way that doesn't make all the other haproxies use it
+
+    - [ ] modify `bup_server` code and db so we can set a compute server to be "experimental", hence will be exluded when new projects created
+    - [ ] add bup server for new compute machine to db as experimental
+    - [ ] add it as a host for projects
+    - [ ] after sync, move project(s) there.
+
+- [ ] permissions: need to go through and fix all perms once and for all...
+
+- [ ] get rid of sockjs: support only websockets
+
+- [ ] figure out how to make the browser connect to hub in the right dc directly, with each project.
+
+- [ ] admin: make the monitor connect to all bup servers and verify that they are accepting connections; e.g., under duress they port where they are serving may change.;   OR, at least check that `bup_server` is running on all storage machines.
 
 - [ ] add a way to specify static ip address (created if not exist) to vm_gce.py and admin.py
 
@@ -6,11 +31,11 @@
 
 - [ ] control+v to paste issue: https://mail.google.com/mail/u/0/?shva=1#inbox/145bebfd87489cf8
 
+- [ ] hosts file... DNS server
+
 - [ ] temporary band-aide for replication in face failure: write something that, for each project touched in the last week (say), does an rsync out from it's master location to the two slaves.
 
 - [ ] fix the add collaborator search to not display results randomly
-
-- [ ] change default browser font to Monospace (browser default); makes the most sense!
 
 - [ ] upgrade to codemirror 4.1: https://mail.google.com/mail/u/0/?shva=1#inbox/145896f4d974137d
 
@@ -73,9 +98,7 @@
      - when a client *initiates* a move, it will query the db for any mounts and then inform the bup_servers of them. Thus the move logic is event driven, where the event is "move a project".   If the global client doing the moving can't contact the local bup_server, it will keep trying... (?)
 
 
-- [ ] get GCE VM restart to robustly work with all proper mounting.
-
-- [ ] rekey ssl cert: http://support.godaddy.com/help/article/4976/rekeying-an-ssl-certificate
+- [ ] re-key ssl cert: http://support.godaddy.com/help/article/4976/rekeying-an-ssl-certificate
 
 - [ ] make it so `bup_server` will refuse to start if some sanity checks regarding the filesystem fail, e.g., that bup/projects is mounted as  /projects
 
@@ -154,3 +177,10 @@
 - [ ] script to cleanup bup repos, e.g., delete tmp files, maybe recompact, etc.
 
 - [ ] manual project move system -- bring it back...
+
+- [ ] 3d graphics improvements - check out http://clara.io/, which is based on threejs, but does realtime sync, etc. THAT's what we want. https://news.ycombinator.com/item?id=7709928
+
+- [x] change default browser font to Monospace (browser default); makes the most sense!
+
+- [x] get GCE VM restart to robustly work with all proper mounting.
+
