modify `bup_server` code and db so we can set a compute server to be "experimental", hence will be exluded when new projects created

--- a/notes/may2014.md
+++ b/notes/may2014.md
@@ -1,4 +1,4 @@
-- [x] systematic chown:
+- [x] systematic chown -- permissions: need to go through and fix all perms once and for all...
      - [x] add a bup_storage.py chown <project_id> command, which avoids the .snapshots directory
      - [x] write a little python script that runs the chown thing on each project
      - [x] launch it all over
@@ -12,14 +12,16 @@
 
     - [x] start hub, nginx, stunnel, haproxy on the web machine... in a way that doesn't make all the other haproxies use it
 
-    - [ ] modify `bup_server` code and db so we can set a compute server to be "experimental", hence will be exluded when new projects created
+-->    - [ ] modify `bup_server` code and db so we can set a compute server to be "experimental", hence will be exluded when new projects created
+
+ALTER TABLE storage_servers ADD experimental   boolean;
+
     - [ ] add bup server for new compute machine to db as experimental
     - [ ] add it as a host for projects
     - [ ] after sync, move project(s) there.
 
-- [ ] permissions: need to go through and fix all perms once and for all...
-
 - [ ] get rid of sockjs: support only websockets
+      https://github.com/topcloud/socketcluster
 
 - [ ] figure out how to make the browser connect to hub in the right dc directly, with each project.
 
@@ -183,4 +185,6 @@
 - [x] change default browser font to Monospace (browser default); makes the most sense!
 
 - [x] get GCE VM restart to robustly work with all proper mounting.
+
+- [x] change the sage extensions instructions for ipython everywhere to "%load_ext sage"
 
