setup a small test SMC in Europe for testing:

--- a/notes/may2014.md
+++ b/notes/may2014.md
@@ -6,24 +6,35 @@
 - [ ] setup a small test SMC in Europe for testing:
     - [x] define and spin up a web machine and compute machine
     - [x] configure zfs pool for compute machine
-
     - [x] add secrets for stunnel
     - [x] add web machine to database firewall -- for this machine only 10.1.10.2
-
     - [x] start hub, nginx, stunnel, haproxy on the web machine... in a way that doesn't make all the other haproxies use it
-
--->    - [ ] modify `bup_server` code and db so we can set a compute server to be "experimental", hence will be exluded when new projects created
-
+    - [x] modify `bup_server` code and db so we can set a compute server to be "experimental", hence will be exluded when new projects created
 ALTER TABLE storage_servers ADD experimental   boolean;
+    - [x] add bup server for new compute machine to db as experimental
 
-    - [ ] add bup server for new compute machine to db as experimental
-    - [ ] add it as a host for projects
-    - [ ] after sync, move project(s) there.
+    coffee> x={};require('bup_server').global_client(cb:(e,c)->x.c=c)
+    coffee> x.c.register_server(host:'10.4.1.3', dc:3, experimental:true, cb:console.log)
+
+    # make this add the given target machine to locations
+    x={};require('bup_server').global_client(cb:(e,c)->x.c=c)
+    p=x.c.get_project('9834eb82-b34c-41b1-ba3e-60910aa46e12')
+    p.set_last_save(last_save:{'ec2818ce-213a-4318-8f8b-6adaff99b696':0}, cb:console.log, allow_delete:true)
+    p.move(target:'ec2818ce-213a-4318-8f8b-6adaff99b696',cb:console.log)
+    p.set_settings(cb:console.log, cores:4, cpu_shares:1024, memory:32, mintime:9999999999999999)   # mintime is in units of seconds.
+
+    - [x] add it as a host for projects
+    - [x] after sync, move project(s) there.
+
+- [x] delete old vm images
+
 
 - [ ] get rid of sockjs: support only websockets
-      https://github.com/topcloud/socketcluster
+         https://github.com/topcloud/socketcluster
 
 - [ ] figure out how to make the browser connect to hub in the right dc directly, with each project.
+
+- [ ] bup better than my stupid cache is... https://mail.google.com/mail/u/0/?shva=1#inbox/145be2291f56302b
 
 - [ ] admin: make the monitor connect to all bup servers and verify that they are accepting connections; e.g., under duress they port where they are serving may change.;   OR, at least check that `bup_server` is running on all storage machines.
 
