planning and newer versions of packages

--- a/notes/may2014.md
+++ b/notes/may2014.md
@@ -1,33 +1,39 @@
-- [x] systematic chown -- permissions: need to go through and fix all perms once and for all...
-     - [x] add a bup_storage.py chown <project_id> command, which avoids the .snapshots directory
-     - [x] write a little python script that runs the chown thing on each project
-     - [x] launch it all over
 
-- [ ] setup a small test SMC in Europe for testing:
-    - [x] define and spin up a web machine and compute machine
-    - [x] configure zfs pool for compute machine
-    - [x] add secrets for stunnel
-    - [x] add web machine to database firewall -- for this machine only 10.1.10.2
-    - [x] start hub, nginx, stunnel, haproxy on the web machine... in a way that doesn't make all the other haproxies use it
-    - [x] modify `bup_server` code and db so we can set a compute server to be "experimental", hence will be exluded when new projects created
-ALTER TABLE storage_servers ADD experimental   boolean;
-    - [x] add bup server for new compute machine to db as experimental
 
-    coffee> x={};require('bup_server').global_client(cb:(e,c)->x.c=c)
-    coffee> x.c.register_server(host:'10.4.1.3', dc:3, experimental:true, cb:console.log)
+- [ ] cassandra 2 upgrade
+    HOW?
+       - upgrade cassandra, node, nginx, haproxy in base vm's
+       - [x] make a testing vm with /mnt/cassandra from cassandra3
+       - [x] remove it from tinc network and directly ssh in
+       - [x] try to start cassandra 2.0.7 and see what happens, etc., following the official instructions about how to upgrade
+       - [x] debug until it works      
+       - [x] make cassandra snapshot across both dc's: 
+           nodetool snapshot salvus -t before-c2          
+       - [x] make zfs snapshot across both dc's
+       - [ ] upgrade dc1
+       
+                cd salvus/salvus/; . salvus-env; nodetool drain 
+                 
+                cloud.stop('cassandra',host='cassandra3')
+                
+                sudo shutdown -h now
+                
+                cloud.restart('vm',hostname='cassandra3')
+                
+                cloud.start('cassandra',host='cassandra3')
+                
+                 
+       
+       - [ ] upgrade dc0
 
-    # make this add the given target machine to locations
-    x={};require('bup_server').global_client(cb:(e,c)->x.c=c)
-    p=x.c.get_project('9834eb82-b34c-41b1-ba3e-60910aa46e12')
-    p.set_last_save(last_save:{'ec2818ce-213a-4318-8f8b-6adaff99b696':0}, cb:console.log, allow_delete:true)
-    p.move(target:'ec2818ce-213a-4318-8f8b-6adaff99b696',cb:console.log)
-    p.set_settings(cb:console.log, cores:4, cpu_shares:1024, memory:32, mintime:9999999999999999)   # mintime is in units of seconds.
 
-    - [x] add it as a host for projects
-    - [x] after sync, move project(s) there.
+- [ ] cassandra in gce
 
-- [x] delete old vm images
+- [ ] make "vm.py" also properly try to shutdown vm's (hence export zpool's) for a minute before destroying them, like `vm_gce.py` does.
 
+- [ ] "apt-get install nethogs" everwhere.
+
+- [ ] mod_pagespeed module? "the js files is really long over here ... and even if you do not activate most of its features, it would still enable this spdy http protocol extension to mix up multiple data transfers in a single tcp connection"
 
 - [ ] get rid of sockjs: support only websockets
          https://github.com/topcloud/socketcluster
@@ -198,4 +204,34 @@ ALTER TABLE storage_servers ADD experimental   boolean;
 - [x] get GCE VM restart to robustly work with all proper mounting.
 
 - [x] change the sage extensions instructions for ipython everywhere to "%load_ext sage"
+
+- [x] systematic chown -- permissions: need to go through and fix all perms once and for all...
+     - [x] add a bup_storage.py chown <project_id> command, which avoids the .snapshots directory
+     - [x] write a little python script that runs the chown thing on each project
+     - [x] launch it all over
+
+- [x] setup a small test SMC in Europe for testing:
+    - [x] define and spin up a web machine and compute machine
+    - [x] configure zfs pool for compute machine
+    - [x] add secrets for stunnel
+    - [x] add web machine to database firewall -- for this machine only 10.1.10.2
+    - [x] start hub, nginx, stunnel, haproxy on the web machine... in a way that doesn't make all the other haproxies use it
+    - [x] modify `bup_server` code and db so we can set a compute server to be "experimental", hence will be exluded when new projects created
+ALTER TABLE storage_servers ADD experimental   boolean;
+    - [x] add bup server for new compute machine to db as experimental
+
+    coffee> x={};require('bup_server').global_client(cb:(e,c)->x.c=c)
+    coffee> x.c.register_server(host:'10.4.1.3', dc:3, experimental:true, cb:console.log)
+
+    # make this add the given target machine to locations
+    x={};require('bup_server').global_client(cb:(e,c)->x.c=c)
+    p=x.c.get_project('9834eb82-b34c-41b1-ba3e-60910aa46e12')
+    p.set_last_save(last_save:{'ec2818ce-213a-4318-8f8b-6adaff99b696':0}, cb:console.log, allow_delete:true)
+    p.move(target:'ec2818ce-213a-4318-8f8b-6adaff99b696',cb:console.log)
+    p.set_settings(cb:console.log, cores:4, cpu_shares:1024, memory:32, mintime:9999999999999999)   # mintime is in units of seconds.
+
+    - [x] add it as a host for projects
+    - [x] after sync, move project(s) there.
+
+- [x] delete old vm images
 
