tasks: snapshot of work in progress

--- a/notes/may2014.md
+++ b/notes/may2014.md
@@ -15,6 +15,16 @@
 
 --> - [ ] first task list attempt...
 
+ -->   - [ ] create task
+   - [ ] render list of tasks
+   - [ ] edit task
+   - [ ] mark task done
+
+We are going to need to use a message queue system to do todo lists with sync, since they work at a level different than projects (so we can't use projects).
+This looks intriguing: http://nanomsg.org/index.html
+For now, we'll just do the sync whenever the user clicks on the tasks tab and have a refresh button.   Stupid but will be fine for now.
+
+
 - [ ] make hub's point at their local db *ONLY*
 
 ---
