planning and adding packages of interest

--- a/notes/may2014.md
+++ b/notes/may2014.md
@@ -1,50 +1,30 @@
 # VM image update
 
  - [ ] update salvus repo
+ - [ ] `unset MAKE; npm install net-ping`
  - [ ] Do this:
-         setcap cap_net_raw,cap_net_admin=eip /home/salvus/salvus/salvus/data/local/bin/node
+         sudo su
+         apt-get install libcap2-bin; setcap cap_net_raw,cap_net_admin=eip /home/salvus/salvus/salvus/data/local/bin/node
+ - [ ] this:
+         apt-get install biber
 
 
 # todo
 
-- [x] check on backups
-- [x] upgrade all hosts
-- [x] restart all older cassandra nodes, but with new configuration
-- [x] add 2 web hosts to each gce dc  (launched)
-- [x] nodetool repair? -- it worked; improve script to cover all nodes (via output of nodetool status) and start again with "every".
+- [x] biber: https://mail.google.com/mail/u/0/?shva=1#inbox/145ebb10a70a83ab
 
-
-
-- [ ] make a graph of tinc connection times between nodes
-- [ ] add extra information / improve tinc key distribution / deal with firewall issues / static ips, etc., so all of tinc network is optimal
-
-      - trying out node-net-ping
-      Had to do
-
-          setcap cap_net_raw,cap_net_admin=eip  /projects/3702601d-9fbc-4e4e-b7ab-c10a79e34d3b/salvus/salvus/data/local/bin/node
-
-      Can get ping time as follows:
-
-          w=require('misc').mswalltime; t=w(); session.pingHost('10.1.1.5', (e,r) -> console.log(w(t)))
-
+--> - [ ] first task list attempt...
 
 - [ ] make hub's point at their local db *ONLY*
-- [ ] uw tinc firewall issue
+
+---
 
 
-- [ ] point europe web host at europe database
-- [ ] worry about cassandra firewall
-- [ ] worry -- do I need to recreate indexes manually?
-- [ ] sync-related timeouts: raise everything from 10 to at least 30.
-
-
-----
+- [ ] consider deleting all the `save_log.json` files, which since I turned off, are worthless.
 
 - [ ] idea: consider writing a node.js-based cassandra FUSE implementation.  This would take a few days, but be much better async wise (and use binary cql) than the python fuse cassandra driver.   I would use this to implement a global eventually consistent shared filesystem (with quotas, etc.), which is clearly needed.
 
 - [ ] update bup -- https://mail.google.com/mail/u/0/?shva=1#inbox/145be2291f56302b
-
-- [ ] weird connection slowness between padelford and gce but not through 4545.  Could this be due to firewalls?
 
 - [ ] spell checking: https://mail.google.com/mail/u/0/?shva=1#inbox/145e1770e9db6d41
 
@@ -316,4 +296,65 @@ stables.
 
   ALTER KEYSPACE "salvus" WITH REPLICATION = {'class' : 'NetworkTopologyStrategy', 'DC0':3, 'DC1':3, 'DC2':3, 'DC3':3};
 
+
+
+- [x] check on backups
+- [x] upgrade all hosts
+- [x] restart all older cassandra nodes, but with new configuration
+- [x] add 2 web hosts to each gce dc  (launched)
+- [x] nodetool repair? -- it worked; improve script to cover all nodes (via output of nodetool status) and start again with "every".
+- [x] make a graph of tinc connection times between nodes
+      - trying out node-net-ping
+      Had to do
+          setcap cap_net_raw,cap_net_admin=eip  /projects/3702601d-9fbc-4e4e-b7ab-c10a79e34d3b/salvus/salvus/data/local/bin/node
+      Can get ping time as follows:
+          w=require('misc').mswalltime; t=w(); session.pingHost('10.1.1.5', (e,r) -> console.log(w(t)))
+
+- [x] add extra information / improve tinc key distribution / deal with firewall issues / static ips, etc., so all of tinc network is optimal
+
+    Make communication between 10.4.1.5 and 10.4.1.3 fast.
+
+Tinc notes:
+
+       ProcessPriority = high
+       LocalDiscovery = yes
+
+OK, as far as I can tell, LocalDiscover is totally useless and doesn't work, as is all other automatic discovery.
+Instead, we have to explicitly specify ConnectTo parameters in the tinc.conf file, to connect to *everything* else.
+AND we also need to copy the public keys around as well.
+But doing this is really hard.
+I'm really puzzled.
+Maybe the problem is how I'm setting up the subnets or something.
+
+OK, I think the only solution is the following:
+
+  (1) in vmgce.py we have to do this:
+       (1) attempt in parallel to copy over public key file to all machines that have
+       the Address= line to new machine; note which succeed.
+       (2) in conf, put in ConnectTo, *every* host that we successfully copied to in step 1.
+
+  (2) don't forget -- current compute nodes, etc., aren't setup properly....
+
+Wait, some changes are needed due to how Google bills things: "Packets sent to an instance using an external address are billed as external traffic, even if the sender is in the same network"
+
+Question: do the internal addresses work across DC's? Yes.
+So this means we need to use:
+
+    Address=external address for external machines that need to initiate a direct connect to gce nodes
+    Address=internal address for gce nodes.
+
+This complicates things a little.
+I could add a parameter for key distribution that is ignored by tinc, but used by my scripts:
+
+    ExternalAddress =
+
+OR, I could copy the public key directly from the new host to the other hosts... (but can't due to ssh keys not allowing that).
+
+  --> OR, I could distribute keys using the vpn instead of the Address=line.  I.e., use "Subnet = 10.3.1.2".
+
+
+
+- [x] point europe web host at europe database -- encourage testing
+- [x] sync-related timeouts: raise everything from 10 to at least 30.
+- [x] make the rsync replication be rate limited -- it does noticeably
 
