tasks: very rough, totally broken code that fully implements (?) creation of project-level tasks that are persisted in the database with trivial UI.

--- a/notes/may2014.md
+++ b/notes/may2014.md
@@ -11,18 +11,21 @@
 
 # todo
 
+    alter table projects add  task_list_id uuid;
+    /* also add all the task schema */
+
 - [x] biber: https://mail.google.com/mail/u/0/?shva=1#inbox/145ebb10a70a83ab
-
---> - [ ] first task list attempt...
-
- -->   - [ ] create task
-   - [ ] render list of tasks
-   - [ ] edit task
-   - [ ] mark task done
 
 We are going to need to use a message queue system to do todo lists with sync, since they work at a level different than projects (so we can't use projects).
 This looks intriguing: http://nanomsg.org/index.html
 For now, we'll just do the sync whenever the user clicks on the tasks tab and have a refresh button.   Stupid but will be fine for now.
+
+- [ ] add task list data field, for more flexibility
+
+- [ ] front end global task list for each project
+
+- [ ] account task list for each user
+
 
 
 - [ ] make hub's point at their local db *ONLY*
