--- a/notes/may2014.md
+++ b/notes/may2014.md
@@ -1,5 +1,5 @@
 # VM image update
-
+(see laptop todo list in main dev project)
  - [ ] update salvus repo
  - [ ] `unset MAKE; npm install net-ping`
  - [ ] Do this:
@@ -8,17 +8,45 @@
  - [ ] this:
          apt-get install biber
 
+ - [ ] fix ext:
+
+         zfs create pool/ext
+         zfs set quota=1G pool/ext
+         chmod a+rw /pool/ext
+         mkdir -p /pool/ext/sage-6.2.rc2/ext/
+         rsync -axvH /usr/local/sage/current/local/share/sage/ext/ /pool/ext/sage-6.2.rc2/ext/
+         rm -rf /usr/local/sage/current/local/share/sage/ext/
+         ln -s /pool/ext/sage-6.2.rc2/ext /usr/local/sage/current/local/share/sage/ext
+         zfs destroy -r pool/octave
+         rm /usr/local/sage/current/local/share/sage/ext/octave
+         mkdir /usr/local/sage/current/local/share/sage/ext/octave
+         chmod a+rwx -R /pool/ext/
+
 
 # todo
 
-- [x] biber: https://mail.google.com/mail/u/0/?shva=1#inbox/145ebb10a70a83ab
+- [ ] build: add fix ext permissions stuff above to build.
 
---> - [ ] first task list attempt...
+- [ ] tinc if foo-bared.  I can't get vm's on cloud3 to connect to cloud3 even from cloud3. Currently using cloud2 as tinc server for vm's on cloud3.
+Also the cloud3 tinc is only connecting to a few other servers.  UGH.
+
+- [ ] first task list attempt...
+
+- [ ] the .trash directory is appearing all over the place.
 
 - [ ] make hub's point at their local db *ONLY*
 
+- [ ] add back max height in worksheet
+
+
+
 ---
 
+- [ ] restart cassandra nodes at GCE with more RAM, now that they are going to be used soon.
+
+- [ ] wlimit the rsync even more to 1000 as a temporary measure to reduce impact on system performance.
+
+- [ ] move replication rsync'ing so it doesn't use the tinc vpn at all -- I can add additional columns in the database giving ip addresses that should be used in various contexts for routing.  Complicated but do-able.
 
 - [ ] consider deleting all the `save_log.json` files, which since I turned off, are worthless.
 
@@ -357,4 +385,14 @@ OR, I could copy the public key directly from the new host to the other hosts...
 - [x] point europe web host at europe database -- encourage testing
 - [x] sync-related timeouts: raise everything from 10 to at least 30.
 - [x] make the rsync replication be rate limited -- it does noticeably
+
+- [x] biber: https://mail.google.com/mail/u/0/?shva=1#inbox/145ebb10a70a83ab
+
+
+- [x] testing swap on compute10
+        zfs create pool/swap -V 32G -b 4K
+        mkswap -f /dev/pool/swap
+        zfs set compression=lz4 pool/swap
+        zfs set dedup=off pool/swap
+        swapon /dev/pool/swap
 
