minor fixes to some notes

--- a/notes/2015-05-20-billing.md
+++ b/notes/2015-05-20-billing.md
@@ -66,25 +66,25 @@ Base fee to have dedicated machine: \$4/month + \$0.05/GB of disk space.
 
 So invoice might look like this:
 
-Membership............................. $ 7
-3 dedicated computers, 20GB disk....... $13
-157.4 n1-standard-1 pre-empt hours..... $ 3.93
+Membership............................. \$ 7
+3 dedicated computers, 20GB disk....... \$13
+157.4 n1-standard-1 pre-empt hours..... \$ 3.93
 
 
 Total ................................. 23.93.
 
 OK, that's clearly out of whack.
 
-Nobody would want to pay $13 for computers that are so under-used.
+Nobody would want to pay \\$13 for computers that are so under-used.
 Hmmm....
 
 With some cleverness I could get that fixed cost for an off machine down a lot.
 Base image could probably be 10GB and all other disk date (e.g., /usr/local) could
 be read-only mounted (so shared across everything).  30GB disk costs me `30*0.04 = 1.2/month`; let's say 0.1/GB to user.  With that the above invoice would be:
 
-Membership............................. $ 7
-3 dedicated computers, 20GB disk....... $ 3.00
-157.4 n1-standard-1 pre-empt hours..... $ 3.93
+Membership............................. \$ 7
+3 dedicated computers, 20GB disk....... \$ 3.00
+157.4 n1-standard-1 pre-empt hours..... \$ 3.93
 
 Total ................................. 13.93.
 
