--- a/notes/2015-05-20-thoughts.md
+++ b/notes/2015-05-20-thoughts.md
@@ -10,13 +10,13 @@ This involves both creating the SageMathCloud website and supporting the develop
 
 ### Company principles:
 
-- Absolutely all company funded software must be open source, under a GPLv3 compatible license.    We are a 100% open source company.
+- Absolutely all company funded software must be open source, under a **GPLv3 compatible** license.    We are a 100% open source company.
 
 - Company independence and self-determination is far more important than money.  A core principle is that SMI is not for sale at any price, and will not participate in any partnership (for cost) that would restrict our freedom. This means:
 
    - reject any offers from corp development from big companies to purchase or partner,
    - do not take any investment money unless absolutely necessary, and then only from the highest quality investors
-   - do not take venture capitol ever
+   - do not take venture capital ever
 
 - Be as open as possible about everything involving the company.  What should not be open (since it is dangerous):
    - security issues, passwords
